@@ -1,5 +1,10 @@
 2010-11-09  Eric Botcazou  <ebotcazou@adacore.com>
 
+	* gcc-interface/utils.c (save_gnu_tree): Improve comments.
+	(get_gnu_tree): Likewise.
+
+2010-11-09  Eric Botcazou  <ebotcazou@adacore.com>
+
 	* gcc-interface/decl.c (finish_fat_pointer_type): New function.
 	(gnat_to_gnu_entity) <E_Array_Type>: Use it to build the fat pointer
 	type.
